# nsg

./: CMakeLists.txt  README.md
include/efanna2e/: .distance.h.swp  index_nsg.h  neighbor.h
src/: .index_nsg.cpp.swp  CMakeLists.txt  index_nsg.cpp
tests/: CMakeLists.txt  test_nsg_index.cpp  test_nsg_optimized_search.cpp  test_nsg_optimized_search_multi.cpp  test_nsg_search.cpp
