cmake_minimum_required(VERSION 2.8)

project(efanna2e)
include_directories(${PROJECT_SOURCE_DIR}/include)
#OpenMP
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
else()
    message(FATAL_ERROR "no OpenMP supprot")
endif()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free")
add_definitions (-std=c++11 -O3 -lboost -march=native -Wall -DINFO)
#add_definitions (-std=c++11 -O3 -lboost -march=native -Wall -DINFO -DGET_MISS_TRAVERSE -DEVAL_RECALL)
#add_definitions (-std=c++11 -O3 -lboost -march=native -Wall -DINFO -DTHETA_GUIDED_SEARCH -DGET_MISS_TRAVERSE -DEVAL_RECALL)# -DPROFILE)
#add_definitions (-std=c++11 -O3 -lboost -march=native -Wall -DINFO -DTHETA_GUIDED_SEARCH -DGET_MISS_TRAVERSE -DEXACT_SEARCH -DEVAL_RECALL)
#add_definitions (-std=c++11 -O3 -lboost -march=native -Wall -DINFO -DTHETA_GUIDED_SEARCH -DGET_MISS_TRAVERSE -DEXACT_SEARCH -DEVAL_RECALL -DGET_TOPK_SNAPSHOT)
add_definitions (-DTHETA_GUIDED_SEARCH)
#add_definitions (-DGET_MISS_TRAVERSE)
add_definitions (-DEVAL_RECALL)
#add_definitions (-DPROFILE)
add_definitions (-DTHREAD_LATENCY)

add_subdirectory(src)
add_subdirectory(tests)
